--- a/bootstrap/less/variables.less
+++ b/bootstrap/less/variables.less
@@ -22,6 +22,30 @@
 @brand-danger:          #d9534f;
 
 
+// Howard Colors
+// -------------------------
+@black:                 #000;
+@grayDarker:            #222;
+@grayDark:              #333;
+@gray:                  #999;
+@grayLight:             #ccc;
+@grayLighter:           #eee;
+@white:                 #fff;
+
+
+// Accent colors
+// -------------------------
+@blue:                  #2b7bc5;
+@blueDark:              #0064cd;
+@green:                 #46a546;
+@red:                   #9a1912;
+@yellow:                #ffc40d;
+@orange:                #c03021;
+@pink:                  #c3325f;
+@purple:                #7a43b6;
+@gold:                  #D4AF37;
+
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
@@ -77,7 +101,7 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-@icon-font-path:          "../fonts/";
+@icon-font-path:          "./bootstrap/fonts/";
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
